Finished profile pic id

--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@ Not implemented yet!
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Homepage</title>
+	<title>Profile</title>
 	<link href="styles.css" rel="stylesheet">
 
 </head>
@@ -18,7 +18,7 @@ Not implemented yet!
 	<content>
 		<h1>Nathan Westergard</h1>
 
-		<img src="https://images.unsplash.com/photo-1640526316883-bf77fab51969?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3RpY2ttYW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" id="pic">
+		<img src="https://images.unsplash.com/photo-1640526316883-bf77fab51969?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8c3RpY2ttYW58ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" id="pic2">
 		<p><h2>Live in Idaho. Love to dirtbike, collect Lego sets, and be with my family.</h2></p>
         <p><h3>List of some qualities I have.</h3></p>
 		<ul><li>Hard Working</li>
@@ -43,7 +43,6 @@ Not implemented yet!
 			Message:
 			<input type="textarea">
 
-			
 			<input type="submit">
 		</form>
 
@@ -56,14 +55,7 @@ Not implemented yet!
     <button class ="button" id="color">My Favorite Color</button>
     <button class ="button" id="place">My Favorite Place</button>
     <button class ="button" id="ritual">My Favorite Ritual</button>
-<script src="./profile.js"></script>
+	<a href="./home.html"><< Back </a>
+	<script src="./profile.js"></script>
 </body>
 </html>
-
-
-
-
-<br>
-<br>
-
-<a href="./home.html"><< Back </a>
